--- a/min/index.html
+++ b/min/index.html
@@ -1,16 +1,4 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"><title>Stuart Santos | Web Developer | Web Designer</title><link href="img/favicon.ico" rel="shortcut icon"><meta name="description" content="This is the website of Stuart Santos, a web developer and designer with a background in Front End Development, UX, and UI work."><meta name="viewport" content="width=device-width,minimum-scale=1,maximum-scale=1,user-scalable=no"><style type="text/css">html, body, div, span, h1, a, ul, li{ margin-top: 0px; margin-right: 0px; margin-bottom: 0px; margin-left: 0px; padding-top: 0px; padding-right: 0px; padding-bottom: 0px; padding-left: 0px; border-top-width: 0px; border-right-width: 0px; border-bottom-width: 0px; border-left-width: 0px; border-style: initial; border-color: initial; font-size: 100%; font: inherit; vertical-align: baseline; }
-    body{ line-height: 1; }
-     ul{ list-style-type: none; list-style-position: initial; list-style-image: initial; }
-    *{ box-sizing: border-box; }
-    body{ font-family: museo, serif; font-weight: 300; color: rgb(115, 115, 115); line-height: 1.3; -webkit-font-smoothing: antialiased; text-rendering: optimizelegibility; }
-    a:link{ color: rgb(12, 136, 215); text-decoration: none; -webkit-transition-property: all; -webkit-transition-duration: 0.2s; -webkit-transition-timing-function: initial; -webkit-transition-delay: initial; }
-    h1{ font-size: 1.5em; line-height: 3; font-family: p22-underground, sans-serif; vertical-align: top; text-align: center; display: inline; }
-    @media (min-width: 730px){
-    h1{ text-align: left; }
-    }
-    @media (min-width: 730px){
-    .name{ -webkit-box-flex: 1; margin-left: 4em; }
-    }</style><script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js" async></script><script type="text/javascript">/*! loadJS: load a JS file asynchronously. [c]2014 @scottjehl, Filament Group, Inc. (Based on http://goo.gl/REQGQ by Paul Irish). Licensed MIT */
+<!doctype html><html lang="en"><head><meta charset="utf-8"><title>Stuart Santos | Web Developer | Web Designer</title><link href="img/favicon.ico" rel="shortcut icon"><link rel="stylesheet" type="text/css" href="css/styles.css"><meta name="description" content="This is the website of Stuart Santos, a web developer and designer with a background in Front End Development, UX, and UI work."><meta name="google-site-verification" content="eKF_i70huOSGK6BUZpYdKIoTy0ihYUoZNxWG_HIYPCc"><meta name="viewport" content="width=device-width,minimum-scale=1,maximum-scale=1,user-scalable=no"><script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js" async></script><script type="text/javascript">/*! loadJS: load a JS file asynchronously. [c]2014 @scottjehl, Filament Group, Inc. (Based on http://goo.gl/REQGQ by Paul Irish). Licensed MIT */
     function loadJS( src ){
       "use strict";
       var ref = window.document.getElementsByTagName( "script" )[ 0 ];
@@ -19,42 +7,7 @@
       ref.parentNode.insertBefore( script, ref );
       return script;
     }
-    loadJS("js/scripts.min.js");
-
-    function loadCSS( href, before, media, callback ){
-      "use strict";
-      var ss = window.document.createElement( "link" );
-      var ref = before || window.document.getElementsByTagName( "script" )[ 0 ];
-      var sheets = window.document.styleSheets;
-      ss.rel = "stylesheet";
-      ss.href = href;
-      // temporarily, set media to something non-matching to ensure it'll fetch without blocking render
-      ss.media = "only x";
-      if( callback ) {
-        ss.onload = callback;
-      }
-      // inject link
-      ref.parentNode.insertBefore( ss, ref );
-      // This function sets the link's media back to `all` so that the stylesheet applies once it loads
-      // It is designed to poll until document.styleSheets includes the new sheet.
-      function toggleMedia(){
-        var defined;
-        for( var i = 0; i < sheets.length; i++ ){
-          if( sheets[ i ].href && sheets[ i ].href.indexOf( ss.href ) > -1 ){
-            defined = true;
-          }
-        }
-        if( defined ){
-          ss.media = media || "all";
-        }
-        else {
-          setTimeout( toggleMedia );
-        }
-      }
-      toggleMedia();
-      return ss;
-    }
-    loadCSS("css/styles.css");</script><script type="text/javascript">(function(d) {
+    loadJS("js/scripts.min.js");</script><script type="text/javascript">(function(d) {
       var config = {
         kitId: 'mte7xac',
         scriptTimeout: 3000
