--- a/html/index.html
+++ b/html/index.html
@@ -8,19 +8,8 @@
   <meta name="description" content="This is the website of Stuart Santos, a web developer and designer with a background in Front End Development, UX, and UI work.">
   <meta name="google-site-verification" content="eKF_i70huOSGK6BUZpYdKIoTy0ihYUoZNxWG_HIYPCc" />
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js" async></script>
-  <script type="text/javascript">
-    /*! loadJS: load a JS file asynchronously. [c]2014 @scottjehl, Filament Group, Inc. (Based on http://goo.gl/REQGQ by Paul Irish). Licensed MIT */
-    function loadJS( src ){
-      "use strict";
-      var ref = window.document.getElementsByTagName( "script" )[ 0 ];
-      var script = window.document.createElement( "script" );
-      script.src = src;
-      ref.parentNode.insertBefore( script, ref );
-      return script;
-    }
-    loadJS("js/scripts.min.js");
-  </script>
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+  <script src="/js/scripts.min.js" async></script>
   <script type="text/javascript">
     (function(d) {
       var config = {
