--- a/html/my-notes/gruntfile.html
+++ b/html/my-notes/gruntfile.html
@@ -7,20 +7,8 @@
   <link rel="stylesheet" href="../css/styles.css">
   <meta name="description" content="Starting a new project or repository usually requires the monotony of setting up some base files that help with your workflow. This is my standard Gruntfile.js file that I use as a template for setting up new projects which covers some of the most common tasks I use in everyday coding.">
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js" async></script>
-  <script type="text/javascript">
-    /*! loadJS: load a JS file asynchronously. [c]2014 @scottjehl, Filament Group, Inc. (Based on http://goo.gl/REQGQ by Paul Irish). Licensed MIT */
-    function loadJS( src ){
-      "use strict";
-      var ref = window.document.getElementsByTagName( "script" )[ 0 ];
-      var script = window.document.createElement( "script" );
-      script.src = src;
-      ref.parentNode.insertBefore( script, ref );
-      return script;
-    }
-
-    loadJS("../js/scripts.min.js");
-  </script>
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+  <script src="/js/scripts.min.js" async></script>
   <script type="text/javascript">
     (function(d) {
       var config = {
